rename some files and z-index issues

--- a/src/style/components/_contribute.sass
+++ b/src/style/components/_contribute.sass
@@ -22,7 +22,7 @@
     padding: $margin-large 0
     text-align: center
     min-height: 300px
-    z-index: 9999
+    z-index: 999
     position: relative
 
     h6
