--- a/src/style/components/_header.sass
+++ b/src/style/components/_header.sass
@@ -7,7 +7,7 @@
   top: 0
   left: 0
   right: 0
-  z-index: 999
+  z-index: 999999
   background: $white
 
   &__wrapper
@@ -75,7 +75,7 @@
     left: 100vw
     width: 100vw
     background-color: $black
-    z-index: 999
+    z-index: 99999
     padding: 0 $margin
     color: $white
     bottom: 0
