--- a/src/style/components/_toc.sass
+++ b/src/style/components/_toc.sass
@@ -7,7 +7,7 @@
   align-items: flex-start
   flex-direction: column
   padding-top: $margin-large
-  z-index: 99
+  z-index: 999
 
   +mq(tablet)
     display: none
